--- a/Develop/public/index.html
+++ b/Develop/public/index.html
@@ -5,23 +5,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Note Taker</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <title>Simple Strokes</title> <!-- Updated title -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="/assets/css/styles.css">
 </head>
 
 <body>
-  <nav class="navbar bg-info">
-    <a class="navbar-brand text-light p-3" href="/">Note Taker
-    </a>
+  <nav class="navbar">
+    <a class="navbar-brand text-light p-3" href="/">Simple Strokes</a> <!-- Updated branding -->
   </nav>
-  <div class="container">
-    <div style="margin-top: 80px;" class="text-center p-5 mb-4 bg-light">
-      <h1 class="display-4">Note Taker <span role="img" aria-label="Memo">📝</span></h1>
-      <h4 class="mt-4">Take notes with Express</h4>
-      <a class="btn btn-primary btn-lg mt-4" href="/notes" role="button">Get Started</a>
-    </div>
+  <div class="container text-center p-5 mb-4">
+    <img src="./assets/img/logo.png" alt="Simple Strokes Logo" class="img-fluid" style="max-width: 150px;">
+    <h4 class="mt-4">Take notes with Simple Strokes</h4>
+    <a class="btn btn-primary btn-lg mt-4" href="/notes" role="button">Get Started</a>
   </div>
-  <script src="/assets/js/index.js"></script>
 </body>
 
 </html>
